--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint": "^9.15.0",
     "fast-glob": "^3.3.2",
